--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -14,7 +14,9 @@
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/srl_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:refreshing="@{viewModel.isLoading}"
+        app:onRefreshListener="@{() -> viewModel.onRefresh()}" >
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_list"
