--- a/app/src/main/res/layout/list_adapter.xml
+++ b/app/src/main/res/layout/list_adapter.xml
@@ -13,56 +13,84 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:elevation="8dp"
+        app:cardBackgroundColor="#EFEFEF"
         app:cardCornerRadius="8dp">
 
-        <TextView
-            android:id="@+id/quoteEdit"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{p.propertyType}"
-            android:textColor="@color/teal_700"
-            android:textSize="18dp"
-            tools:visibility="visible" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/home_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="@{p.homeType}"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible" />
 
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageview"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginTop="50dp"
-            android:scaleType="centerCrop"
-            app:loadImage="@{p.url}"
-            tools:visibility="visible" />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_item"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:scaleType="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/home_type"
+                app:loadImage="@{p.url}"
+                app:srcCompat="@drawable/icons_home_100"
+                tools:visibility="visible" />
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="160dp"
-            android:background="#E1303F9F"
-            android:gravity="center_vertical"
-            android:paddingStart="8dp"
-            android:text="@{p.propertyType}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@tools:sample/full_names"
-            tools:visibility="visible" />
+            <TextView
+                android:id="@+id/location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#E15B6395"
+                android:gravity="center_vertical"
+                android:padding="8dp"
+                android:text="@{p.city}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                app:layout_constraintBottom_toTopOf="@+id/surface_area"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:visibility="visible" />
 
-        <TextView
-            android:id="@+id/desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
-            android:padding="10dp"
-            android:paddingStart="8dp"
-            android:text="@{p.city}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textSize="12dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@tools:sample/full_names"
-            tools:visibility="visible" />
+            <TextView
+                android:id="@+id/surface_area"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:paddingStart="8dp"
+                android:text="@{p.area+` m²`}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textSize="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/price"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_item"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:paddingStart="8dp"
+                android:text="@{p.price+` €`}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textSize="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_item"
+                tools:visibility="visible" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.cardview.widget.CardView>
 
