--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -12,7 +12,7 @@
             type="com.standardListAndDetailApp.viewmodel.DetailViewModel"/>
         <variable
             name="p"
-            type="com.standardListAndDetailApp.database.DatabaseHome" />
+            type="com.standardListAndDetailApp.repository.database.DatabaseHome" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
