--- a/app/src/main/res/layout/list_adapter.xml
+++ b/app/src/main/res/layout/list_adapter.xml
@@ -11,10 +11,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:elevation="8dp"
-        app:cardBackgroundColor="#EFEFEF"
-        app:cardCornerRadius="8dp">
+        android:layout_margin="@dimen/standard_margin"
+        android:elevation="@dimen/standard_card_elevation"
+        app:cardBackgroundColor="@color/standard_card_background_color"
+        app:cardCornerRadius="@dimen/standard_card_corner_radius">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -24,10 +24,10 @@
                 android:id="@+id/home_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="@dimen/standard_padding"
                 android:text="@{p.homeType}"
                 android:textColor="@color/black"
-                android:textSize="18dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -37,7 +37,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iv_item"
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="@dimen/standard_presentation_iv_height"
                 android:scaleType="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -50,9 +50,9 @@
                 android:id="@+id/location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#E15B6395"
+                android:background="@color/standard_title_background_color"
                 android:gravity="center_vertical"
-                android:padding="8dp"
+                android:padding="@dimen/standard_padding"
                 android:text="@{p.city}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 app:layout_constraintBottom_toTopOf="@+id/surface_area"
@@ -64,11 +64,9 @@
                 android:id="@+id/surface_area"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:paddingStart="8dp"
-                android:text="@{p.area+` m²`}"
+                android:padding="@dimen/standard_padding"
+                android:text="@{p.area+` `+@string/surface_unit}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/price"
                 app:layout_constraintStart_toStartOf="parent"
@@ -79,11 +77,9 @@
                 android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:paddingStart="8dp"
-                android:text="@{p.price+` €`}"
+                android:padding="@dimen/standard_padding"
+                android:text="@{p.price+` `+@string/local_currency}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_item"
