--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="standard_card_background_color">#EFEFEF</color>
+    <color name="standard_title_background_color">#E15B6395</color>
 </resources>
