--- a/app/src/main/res/layout/list_adapter.xml
+++ b/app/src/main/res/layout/list_adapter.xml
@@ -5,7 +5,7 @@
 
     <data>
         <variable
-            name="p" type="com.standardListAndDetailApp.repository.database.DatabaseHome" />
+            name="p" type="com.standardListAndDetailApp.shared.data.repository.database.HomeEntity" />
     </data>
 
     <androidx.cardview.widget.CardView
